[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your-project-name"
version = "0.1.0"
description = "Your project description"
requires-python = ">=3.12"
dependencies = [
    "vllm==0.10.1+gptoss",
    "hf_transfer",
    "ray==2.48.0",
]

[tool.uv]
index-url = "https://pypi.org/simple/"
extra-index-url = [
    "https://wheels.vllm.ai/gpt-oss/",
    "https://download.pytorch.org/whl/nightly/cu128"
]
index-strategy = "unsafe-best-match"
prerelease = "allow"

[tool.uv.sources]
openai-harmony = { path = "./harmony" , editable = true }
